Adjust userInbox as well
